Updating checstyle and PMD versions